# language-models-exploration

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
configs/: config.yaml
models/: bert_classification.py  bert_model.py  bert_sst_classification.py
notebooks/: bert_classification.ipynb  bert_model.ipynb  data_loader.ipynb  temp.ipynb
qa/notebooks/: bert_model.ipynb
scripts/: data_loader.py
squad/models/: bert_model.py
squad/notebooks/: bert_model.ipynb  data_loader.ipynb
squad/scripts/: data_loader.py
