[project]
name = "language-models-exploration"
version = "0.1.0"
description = "Explore LLM train and inference"
authors = [
    {name = "vladimir-molotkov", email = "molotkov1vl@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytorch-lightning>=2.5.1.post0",
    "transformers>=4.52.4",
]

[dependency-groups]
dev = [
    "datasets>=3.6.0",
    "dvc>=3.60.1",
    "fire>=0.7.0",
    "hydra-core>=1.3.2",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "mlflow>=3.1.0",
    "notebook>=7.4.3",
    "omegaconf>=2.3.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
]
