[project]
name = "language-models-exploration"
version = "0.1.0"
description = "Explore LLM train and inference"
authors = [
    {name = "vladimir-molotkov", email = "molotkov1vl@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.26.0",
    "pytorch-lightning>=2.5.1.post0",
    "scikit-learn>=1.7.0",
    "transformers>=4.52.4",
    "datasets>=3.6.0",
    "dvc>=3.60.1",
    "evaluate>=0.4.3",
    "fire>=0.7.0",
    "hydra-core>=1.3.2",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "mlflow>=3.1.0",
    "notebook>=7.4.3",
    "omegaconf>=2.3.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "ipython>=9.3.0",
]

[tool.setuptools]
py-modules = []

[tool.isort]
profile = "black"
